@@ -35,10 +35,12 @@ public class Customer {
     public String toString() {
         String res = "Customer{id=%d, tours=[\n";
         for(Tour tour : this.tours) {
-            if(tour == this.tours.get(this.tours.size() - 1))
-                res += tour.toString();
-            else
-                res += tour.toString() + ", ";
+            if(tour.getCustomer().equals(this)) {
+                if(tour.equals(this.tours.getLast()))
+                    res += tour;
+                else
+                    res += tour;
+            }
         }
         res += "]}";
         return String.format(res, this.customerId);
